# AXZ-Forward-NoDivision-0123456789

./: CITATION.cff  Makefile  PROOF.md  README.md  UPLOAD_FIRST.md  VISIBLE_GITIGNORE.txt  pyproject.toml
.github/workflows/: verify.yml
certificates/: SHA256SUMS.txt  certificate.json  integer_width_report.json  receipt.txt
data/: all_interval_values_sorted.txt  all_values_sorted.txt  negative_values_sorted.txt  nonpositive_values_sorted.txt  positive_values_sorted.txt  witnesses_1_to_8311.tsv
docs/: ARBITRARY_PRECISION_SAFETY.md  DIRECTIONAL_SUBTRACTION.md  GITHUB_PUBLISHING.md  LEADING_ZERO_AUDIT.md  NONPOSITIVE_LEDGER.md  PRIOR_ART_NOTE.md  TRUTH_LABEL.md
scripts/: generate_certificate.py  verify_challenge_3.py  verify_data_hashes.py  verify_runtime_safety.py
src/axz_forward_nodivision_0123456789/: __init__.py  core.py
tests/: test_certificate.py  test_data_hashes.py  test_runtime_safety.py  test_witnesses.py
